--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>TAREAS DE PROGRAMACIÓN</h1>
 <h2>Victoria Chaves 6to Naturales</h2>
-<a href="actividad1">actividad 1</a>
+<a href="actividad1">Presentación sobre la historia de la computación.</a>
 <br><br>
