--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>TAREAS DE PROGRAMACIÓN</h1>
 <h2>Victoria Chaves 6to Naturales</h2>
-<a href="https://docs.google.com/presentation/d/1s8dDcl5dtKiFAAjyy1LhQkUPshZK8bzPPnWwQCqmixs/edit?usp=sharing">Presentación sobre la historia de la computación.</a>
+<a href="https://docs.google.com/presentation/d/1s8dDcl5dtKiFAAjyy1LhQkUPshZK8bzPPnWwQCqmixs/edit?usp=sharing" alt="presentación">Presentación sobre la historia de la computación.</a>
 <br><br>
