--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <h2>Victoria Chaves 6to Naturales</h2>
 <a href="https://docs.google.com/presentation/d/1s8dDcl5dtKiFAAjyy1LhQkUPshZK8bzPPnWwQCqmixs/edit?usp=sharing" alt="presentación"> Presentación sobre la historia de la computación.</a>
 <br><br>
-<a href= "actividad1"> Actividad javascript </a>
+<a href= "actividad1.html"> Actividad javascript </a>
