--- a/actividad1.html
+++ b/actividad1.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html> 
 <html lang="es"> 
-<head> 
-<title>Evaluación de Alumnos</title> 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Evaluación de Alumnos</title> 
 <style> 
 body {
 font-family: Arial, sans-serif;
@@ -13,6 +15,41 @@ padding: 20px;
 text-align: center; 
 color: #333; 
 }
+ .form-group {
+ margin-bottom: 15px; }
+
+ .form-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #555;
+ }
+
+ .form-group input {
+ width: 100%;
+ padding: 8px;
+ box-sizing: border-box;
+ border-radius: 4px;
+ border: 1px solid #ddd;
+ }
+
+ .result {
+  text-align: center;
+  font-size: 18px;
+  margin-top: 20px;
+ padding: 10px;
+  border-radius: 4px;
+  }
+
+ .approved {
+    color: green;
+  }
+
+ .failed {
+  color: red;
+ }
+.retest {
+  color: orange;
+  }
  </style> 
 </head> 
 <body> 
