--- a/actividad1.html
+++ b/actividad1.html
@@ -75,7 +75,7 @@ color: #333;
 functionevaluarAlumno() { 
 const apellido = document.getElementById('apellido').value; 
 const nombre = document.getElementById('nombre').value; 
-const nota = parseFloat(document.getElementById('nota').value; 
+const nota = parseFloat(document.getElementById('nota').value); 
 const resultado = document.getElementById('resultado'); 
 
 if (apellido && nombre && !isNaN(nota)) { 
