--- a/actividad1.html
+++ b/actividad1.html
@@ -55,50 +55,44 @@ color: #333;
 <body> 
 <div class="container">
 <h1>Evaluación de Alumnos</h1>
- <div class="form-group">
-<label for="apellido">Apellido:</label> 
-<input type="text" id="apellido" required> 
-</div>
- <div class="form-group"> 
-<label for="nombre">Nombre:</label>
- <input type="text" id="nombre" required> 
-</div>
- <div class="form-group"> 
-<label for="nota">Nota:</label> 
-<input type="number" id="nota" min="0" max="10" required> 
-</div> 
-<button class="btn"onclick="evaluarAlumno()">Evaluar</button>
- <div id="resultado" class="result"></div>
- </div>
+        <form>
+            <label for="apellido">Apellido:</label> 
+            <input type="text" id="apellido" required> 
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" required> 
+            <label for="nota">Nota:</label> 
+            <input type="number" id="nota" min="0" max="10" required> 
+        <button class="btn" onclick="evaluarAlumno()">Evaluar</button>
+        <div id="resultado" class="result"></div>
+    </form>
 
- <script> 
-functionevaluarAlumno() { 
-const apellido = document.getElementById('apellido').value; 
-const nombre = document.getElementById('nombre').value; 
-const nota = parseFloat(document.getElementById('nota').value); 
-const resultado = document.getElementById('resultado'); 
+    <script> 
+        function evaluarAlumno() { 
+            const apellido = document.getElementById('apellido').value; 
+            const nombre = document.getElementById('nombre').value; 
+            const nota = parseFloat(document.getElementById('nota').value); 
+            const resultado = document.getElementById('resultado'); 
 
-if (apellido && nombre && !isNaN(nota)) { 
-let mensaje = `${apellido}, ${nombre}: `; 
+            if (apellido && nombre && !isNaN(nota)) { 
+                let mensaje = `${apellido}, ${nombre}: `; 
 
-if (nota >= 7) { 
-mensaje += 'Aprobado'; 
-resultado.className = 'result approved'; 
-}
- else if(nota >= 4 && nota < 7) { 
-mensaje += 'Desaprobado'; 
-resultado.className = 'result retest'; 
-}
- else { 
-mensaje += 'Aplazo'; 
-resultado.className = 'result failed'; 
-} resultado.textContent = mensaje; 
-}
-else { 
-resultado.textContent = 'Por favor, complete todos los campos.'; 
-resultado.className = 'result'; 
-} 
-}
- </script> 
+                if (nota >= 7) { 
+                    mensaje += 'Aprobado'; 
+                    resultado.className = 'result approved'; 
+                } else if (nota >= 4 && nota < 7) { 
+                    mensaje += 'Desaprobado'; 
+                    resultado.className = 'result retest'; 
+                } else { 
+                    mensaje += 'Aplazo'; 
+                    resultado.className = 'result failed'; 
+                } 
+                resultado.textContent = mensaje; 
+            } else { 
+                resultado.textContent = 'Por favor, complete todos los campos correctamente.'; 
+                resultado.className = 'result'; 
+            } 
+        }
+    </script> 
+
 </body> 
 </html>
