--- a/actividad1.html
+++ b/actividad1.html
@@ -62,7 +62,7 @@ color: #333;
             <input type="text" id="nombre" required> 
             <label for="nota">Nota:</label> 
             <input type="number" id="nota" min="0" max="10" required> 
-        <button class="btn" onclick="evaluarAlumno()">Evaluar</button>
+        <button type="button" class="btn" onclick="evaluarAlumno()">Evaluar</button>
         <div id="resultado" class="result"></div>
     </form>
 
