--- a/actividad11java.html
+++ b/actividad11java.html
@@ -77,7 +77,8 @@ color: #333;
             if (lado1 == lado2 && lado2 == lado3) { 
                 mensaje = 'Es equilátero'; 
                 resultado.className = 'result approved'; 
-            } else { 
+            } 
+            else { 
                 mensaje = 'No es equilátero'; 
                 resultado.className = 'result failed'; 
             } 
