--- a/actividad11java.html
+++ b/actividad11java.html
@@ -62,7 +62,7 @@ color: #333;
             <input type="number" id="lado2" required> 
             <label for="lado3">lado3:</label> 
             <input type="number" id="lado3" min="0" required> 
-        <button class="btn" onclick="evaluarTriangulo()">Es Equilátero?</button>
+        <button type="button" class="btn" onclick="evaluarTriangulo()">Es Equilátero?</button>
         <div id="resultado" class="result"></div>
     </form>
 
