--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <a href="https://docs.google.com/presentation/d/1s8dDcl5dtKiFAAjyy1LhQkUPshZK8bzPPnWwQCqmixs/edit?usp=sharing" alt="presentación"> Presentación sobre la historia de la computación.</a>
 <br><br>
 <a href= "actividad1java.html"> Actividad javascript </a> <br>
-<a href= "actividad11java.html"> Actividad 2 javascript </a>
+<a href= "actividad11java.html"> Actividad 2 javascript </a> <br>
+<a href= "actividad12java.html"> Actividad 3 javascript </a> <br>
 
