--- a/actividad12java.html
+++ b/actividad12java.html
@@ -54,7 +54,7 @@ color: #333;
 </head> 
 <body> 
 <div class="container">
-<h1>Triángulo es equilátero?</h1>
+<h1>¿Qué tipo de triángulo es?</h1>
         <form>
             <label for="lado1">Lado 1:</label> 
             <input type="number" id="lado1" required> 
