--- a/actividad12java.html
+++ b/actividad12java.html
@@ -78,10 +78,16 @@ color: #333;
                 mensaje = 'Es equilátero'; 
                 resultado.className = 'result approved'; 
             } 
-            else if (lado1 == lado2 && lado2 != lado3){ 
+            else if (lado1 == lado2 && lado2 != lado3 ){ 
                 mensaje = 'Es isosceles'; 
                 resultado.className = 'result retest'; }
-          else {
+            else if (lado1 != lado2 && lado2 == lado3){ 
+                mensaje = 'Es isosceles'; 
+                resultado.className = 'result retest'; }
+            else if (lado1 != lado2 && lado1 == lado3){ 
+                mensaje = 'Es isosceles'; 
+                resultado.className = 'result retest'; }
+            else {
              mensaje = 'Es escaleno'; 
                 resultado.className = 'result failed'; } 
 
