--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <a href="https://docs.google.com/presentation/d/1s8dDcl5dtKiFAAjyy1LhQkUPshZK8bzPPnWwQCqmixs/edit?usp=sharing" alt="presentación"> Presentación sobre la historia de la computación.</a>
 <br><br>
 <a href= "actividad1java.html"> Actividad evaluación alumnos javascript </a> <br>
-<a href= "actividad11java.html"> Actividad 2 triángulo javascript </a> <br>
-<a href= "actividad12java.html"> Actividad 3 triángulo javascript </a> <br>
+<a href= "actividad11java.html"> Actividad 2 triángulo equilátero si-no javascript </a> <br>
+<a href= "actividad12java.html"> Actividad 3 ¿qué triángulo es? javascript </a> <br>
 
