--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <h2>Victoria Chaves 6to Naturales</h2>
 <a href="https://docs.google.com/presentation/d/1s8dDcl5dtKiFAAjyy1LhQkUPshZK8bzPPnWwQCqmixs/edit?usp=sharing" alt="presentación"> Presentación sobre la historia de la computación.</a>
 <br><br>
-<a href= "actividad1java.html"> Actividad evaluación alumnos javascript </a> <br>
-<a href= "actividad11java.html"> Actividad 2 triángulo equilátero si-no javascript </a> <br>
-<a href= "actividad12java.html"> Actividad 3 ¿qué triángulo es? javascript </a> <br>
-
+<a href= "actividad1java.html"> Actividad 14 evaluación alumnos javascript </a> <br>
+<a href= "actividad11java.html"> Actividad 15 triángulo equilátero si-no javascript </a> <br>
+<a href= "actividad12java.html"> Actividad 16 ¿qué triángulo es? javascript </a> <br>
+<a href= "actividad17java.html"> Actividad 17 javascript número mayor </a> <br>
+<a href= "actividad18java.html"> Actividad 18 javascript ordenamiento </a> <br>
