--- a/actividad18java.html
+++ b/actividad18java.html
@@ -1,28 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script>
-      let valor1 = parseFloat(prompt("Ingresa el primer valor:"));
-    let valor2 = parseFloat(prompt("Ingresa el segundo valor:"));
-    let valor3 = parseFloat(prompt("Ingresa el tercer valor:"));
-
-function ordenarNumeros(num1, num2, num3) {
-   
-    let numeros = [num1, num2, num3];
-    numeros.sort(function(a, b) {
-        return a - b; 
-    });
-    return numeros;
+    <title>Ordenar Números</title> 
+<style> 
+body {
+font-family: Arial, sans-serif;
+ background-color: #f4f4f4;
+ margin: 0; 
+padding: 20px; 
 }
+ h1 { 
+text-align: center; 
+color: #333; 
+}
+ .form-group {
+ margin-bottom: 15px; }
 
-let numerosOrdenados = ordenarNumeros(valor1, valor2, valor3);
+ .form-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #555;
+ }
 
-document.write("Los números en orden ascendente son: " + numerosOrdenados.join(", "));
+ .form-group input {
+ width: 100%;
+ padding: 8px;
+ box-sizing: border-box;
+ border-radius: 4px;
+ border: 1px solid #ddd;
+ }
+
+ .result {
+  text-align: center;
+  font-size: 18px;
+  margin-top: 20px;
+ padding: 10px;
+  border-radius: 4px;
+  }
+ </style> 
+</head> 
+<body> 
+<div class="container">
+<h1>Ordenar números</h1>
+        <form>
+            <label for="num1"> Número 1:</label> 
+            <input type="number" id="num1" required> 
+            <label for="num2"> Número 2:</label>
+            <input type="number" id="num2" required> 
+            <label for="num3"> Número 3:</label> 
+            <input type="number" id="num3" min="0" required> 
+        <button type="button" class="btn" onclick="ordenarNumeros()">¿Cuál es mayor?</button>
+        <div id="resultado" class="result"></div>
+    </form>
+    
+    <script> 
+        function ordenarNumeros() { 
+            let num1 = parseFloat(document.getElementById('num1').value);
+            let num2 = parseFloat(document.getElementById('num2').value);
+            let num3 = parseFloat(document.getElementById('num3').value);   
+
+            numeros.sort(function(a, b) {
+                return a - b;});
+
+             document.getElementById("resultado").textContent = "Los números ordenados son: " + numeros.join(", ");
+        }
+            
     </script>
+        <p id="resultado"></p>
 </body>
 </html>
