--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@
 <a href= "actividad12java.html"> Actividad 16 ¿qué triángulo es? javascript </a> <br>
 <a href= "actividad17java.html"> Actividad 17 javascript número mayor </a> <br>
 <a href= "actividad18java.html"> Actividad 18 javascript ordenamiento </a> <br>
+<a href= "actividad19java.html"> Actividad 19 javascript sumatoria </a> <br>
