--- a/actividad19java.html
+++ b/actividad19java.html
@@ -11,7 +11,7 @@
         function sumatoria() {
             let suma = 0;  
             for (let n = 1; n <= 10; n++) {
-                let numero = parseFloat(prompt("Ingresa el número " + i + ":"));  
+                let numero = parseFloat(prompt("Ingresa el número " + n + ":"));  
                 
                 if (numero > 20) {
                     suma += numero;  }}
