--- a/actividad20java.html
+++ b/actividad20java.html
@@ -13,7 +13,7 @@
             for (let n = 1; n <= 10; n++) {
                 let numero = parseFloat(prompt("Ingresa el número " + n + ":"));  
                 
-                if (numero >= 20 & numero <=50) {
+                if (numero >= 20 && numero <=50) {
                     suma += numero;  }}
             document.write ("La suma de los números mayores a 20 es: " + suma);
         }
