--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@
 <a href= "actividad17java.html"> Actividad 17 javascript número mayor </a> <br>
 <a href= "actividad18java.html"> Actividad 18 javascript ordenamiento </a> <br>
 <a href= "actividad19java.html"> Actividad 19 javascript sumatoria </a> <br>
+<a href= "actividad20java.html"> Actividad 20 javascript sumatoria </a> <br>
