--- a/actividad21java.html
+++ b/actividad21java.html
@@ -18,7 +18,7 @@
                 }
             }
 
-            document.getElementById("resultado").innerText = "La suma de los números negativos es: " + sumaNegativos;
+            document.getElementById("resultado").innerText = "La suma de los números negativos es: " + sumanumeros;
         }
     </script>
     <button onclick="suma()">Calcular Suma</button>
