--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@
 <a href= "actividad20java.html"> Actividad 20 javascript sumatoria </a> <br>
 <a href= "actividad21java.html"> Actividad 21 javascript sumatoria de negativos </a> <br>
 <a href= "https://docs.google.com/presentation/d/1_9DHXIETlCWavcIA3pzpH-Yc8d7vYt75CYcu5kFC468/edit?usp=sharing"> Actividad 22 IA </a> <br>
+<a href= "actividad23.html"> Actividad 23 </a> <br>
