--- a/index.html
+++ b/index.html
@@ -12,3 +12,5 @@
 <a href= "actividad21java.html"> Actividad 21 javascript sumatoria de negativos </a> <br>
 <a href= "https://docs.google.com/presentation/d/1_9DHXIETlCWavcIA3pzpH-Yc8d7vYt75CYcu5kFC468/edit?usp=sharing"> Actividad 22 IA </a> <br>
 <a href= "actividad23.html"> Actividad 23 </a> <br>
+<a href= "consigna11-11.html"> Indicar Consigna 11/11 </a> <br>
+<a href= "consigna211-11.html"> Consigna 2 11/11 </a> <br>
