--- a/consigna11-11.html
+++ b/consigna11-11.html
@@ -6,7 +6,7 @@
 </head>
 <h1> Suma de 5 valores mayores a 100 </h1>
 <!-- 
-    Consigna: Pedirle al usuario cinco números mayores a 100. Se suman solo si son mayores a 100. Al final aparece en pantalla la suma total.
+    Consigna: Pedirle al usuario cinco números. Se suman solo si son mayores a 100. Al final aparece en pantalla la suma total.
 -->
 <body>
 
