--- a/consigna211-11.html
+++ b/consigna211-11.html
@@ -6,7 +6,7 @@
 </head>
 <h1> Suma de 5 valores entre 100 y 200</h1>
 <!-- 
-    Consigna: Pedirle al usuario cinco números mayores a 100 y menores a 200. Se suman solo si cumplen con el criterio pedido. Al final aparece en pantalla la suma total.
+    Consigna: Pedirle al usuario cinco números. Se suman solo si estan entre 100 y 200. Al final aparece en pantalla la suma total.
 -->
 <body>
 
